added lookalike audiences

--- a/client/admin/admin.html
+++ b/client/admin/admin.html
@@ -12,6 +12,14 @@
             <button id='set-facebook-ad' class='btn btn-block btn-primary'>Set Facebook Ad Account Id</button>
         </div>
     </div>
+    <div class='row'>
+        <div class='col-md-4'>
+            <input id='facebook-pixel' type='text' class='form-control' placeholder="Facebook pixel ID ..." value='{{getMeta "pixel"}}'>
+        </div>
+        <div class='col-md-3'>
+            <button id='set-facebook-pixel' class='btn btn-block btn-primary'>Set Facebook Pixel</button>
+        </div>
+    </div>
     <div class='row voffset30'>
         <div class='col-md-12'>
             <h3>Connect to Facebook (for custom audiences)</h3>
@@ -28,13 +36,20 @@
             <button id='facebook-test' class='btn btn-block btn-primary'>Facebook Test</button>
         </div>
     </div>
-    <h3>Add Integration</h3>
+    <div class='row voffset30'>
+        <div class='col-md-12'>
+            <h3>Add Integration</h3>
+        </div>
+    </div>
+    
     <div class='row'>
         <div class='col-md-1'>Type: </div>
         <div class='col-md-2'>
             <select class='form-control' id='integration-type'>
                 <option value='purecart'>PureCart</option>
                 <option value='puremail'>PureMail</option>
+                <option value='purepress'>PurePress</option>
+                <option value='purepages'>PurePages</option>
             </select>
         </div>
         <div class='col-md-1'>URL: </div>
@@ -49,5 +64,9 @@
             <button id='add-integration' class='btn btn-block btn-primary'>Link</button>
         </div>
     </div>
-    <h3>Integrations</h3> {{#each integrations}} {{> integration}} {{/each}}
+     <div class='row voffset30'>
+        <div class='col-md-12'>
+            <h3>Integrations</h3>
+        </div>
+    </div> {{#each integrations}} {{> integration}} {{/each}}
 </template>
