--- a/client/audiences/audience.html
+++ b/client/audiences/audience.html
@@ -6,9 +6,9 @@
         <div class='col-md-3'>
             {{type}}
         </div>
-<!--         <div class='col-md-3'>
-            {{size}}
-        </div> -->
+        <div class='col-md-3'>
+            {{facebookAudienceId}}
+        </div>
         <div class='col-md-3'>
             <button class='btn btn-danger delete'>X</button>
         </div>
